[package]
name = "learn-wgpu"
version = "0.1.0"
edition = "2021"

[lib]
name = "learn_wgpu_lib"
crate-type = [ "cdylib", "rlib" ]
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
log = "0.4.19"
wgpu = "0.17.0"
winit = "0.28.6"
