[package]
name = "learn-wgpu"
version = "0.1.0"
edition = "2021"

[lib]
name = "learn_wgpu_lib"
crate-type = [ "cdylib", "rlib" ]
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1.0.0"
env_logger = "0.10.0"
log = "0.4.19"
wgpu = "0.17.0"
winit = "0.28.6"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
console_log = "1"
wgpu = { version = "0.17.0", features = [ "webgl" ] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}



